--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -1,6 +1,8 @@
 .site-header {
   padding-top: $space-1;
   padding-bottom: $space-2;
+  background: #00011f url(https://nats.io/img/header-background.png) repeat-x top center;
+  color: #ffffff
 }
 
 .site-header a {
