--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,9 @@
 <header class="site-header px2 px-responsive">
   <div class="mt2 wrap">
     <div class="measure">
+      <a href="{{ "/" | relative_url }}" class="site-title">
+         <img src="https://www.clipartmax.com/png/small/1-14259_clip-art-animal-drawings-black-and-white-of-animals-cartoon-dog-black.png"/>
+      </a>
       <a href="{{ "/" | relative_url }}" class="site-title">{{ site.title }}</a>
       <nav class="site-nav">
         {% include navigation.html %}
